# kangaroo

./: Makefile  README.md  Syntax.hs  examples  frontend.py  grammar  kangaroo.cabal  lexer.py  parser.py
doc/: grammar  roadmap
includes/C/: cbits.c
llvm/sample/: Makefile  llvmIR.ll  test.c
samples/: example.koo  examples
src/: Codegen.hs  Emit.hs  JIT.hs  Lexer.hs  Main.hs  Operators.hs  Parser.hs  Syntax.hs
