name:                kangaroo
version:             0.0.0.1
Cabal-Version:       >= 1.2
synopsis:            The Kangaroo Programming Language
description:         Kangaroo implementation
homepage:            https://github.com/andrebask/kangaroo
build-type: 	     Simple

executable kangaroo
  main-is: Main.hs
  Hs-Source-Dirs: src
  build-depends:
      base                 >= 4.6 && <4.7
    , haskeline            == 0.7.1.2
    , llvm-general         == 3.4.1.0
    , llvm-general-pure    == 3.4.1.0
    , mtl
    , transformers
    , vector
    , parsec
    , containers
    , MissingH
  ghc-options: -no-user-package-db -package-db .cabal-sandbox/x86_64-linux-ghc-7.6.3-packages.conf.d
	
